force-app/main/default/objects/Task__c/fields/Days_in_Work__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Work__c</fullName>
    <formula>IF((TODAY() -  Start_Date__c)&lt;0, 0, TODAY() -  Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Work</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>