force-app/main/default/objects/Task__c/fields/Executor__c.field-meta.xml
<CustomField>
    <fullName>Executor__c</fullName>
    <formula>IF( ISBLANK(Section__r.Employee__c),  Section__r.Department__r.Department_Name__c ,  Section__r.Department__r.Department_Name__c + &quot;-&quot; +  Section__r.Employee__r.Employee__r.Employee_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Executor</label>
    <type>Text</type>
</CustomField>