force-app/main/default/objects/Task__c/fields/General_Produced__c.field-meta.xml
<CustomField>
    <fullName>General_Produced__c</fullName>
    <label>General Produced</label>
    <summarizedField>Fact__c.Produced__c</summarizedField>
    <summaryForeignKey>Fact__c.Task__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>