force-app/main/default/objects/Task__c/fields/General_Time_Spent__c.field-meta.xml
<CustomField>
    <fullName>General_Time_Spent__c</fullName>
    <label>General Time Spent</label>
    <summarizedField>Fact__c.Duration_in_minutes__c</summarizedField>
    <summaryForeignKey>Fact__c.Task__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>