force-app/main/default/objects/Task__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <label>Plan</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>