force-app/main/default/objects/Task__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <label>Section</label>
    <referenceTo>Section__c</referenceTo>
    <relationshipLabel>Tasks</relationshipLabel>
    <relationshipName>Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>