force-app/main/default/objects/Task__c/fields/Section_Path__c.field-meta.xml
<CustomField>
    <fullName>Section_Path__c</fullName>
    <formula>Section__r.Subsection__r.Name + &quot;--&quot; +  Section__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Section Path</label>
    <type>Text</type>
</CustomField>