force-app/main/default/objects/Task__c/fields/Units__c.field-meta.xml
<CustomField>
    <fullName>Units__c</fullName>
    <label>Units</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Minutes</fullName>
            </value>
            <value>
                <fullName>Pieces</fullName>
            </value>
            <value>
                <fullName>Kilograms</fullName>
            </value>
            <value>
                <fullName>Tons</fullName>
            </value>
            <value>
                <fullName>Rubles</fullName>
            </value>
            <value>
                <fullName>Dollars</fullName>
            </value>
            <value>
                <fullName>Euros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>