force-app/main/default/objects/Task__c/fields/Work_Results__c.field-meta.xml
<CustomField>
    <fullName>Work_Results__c</fullName>
    <formula>General_Produced__c / Plan__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Results</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>