force-app/main/default/objects/Task__c/recordTypes/Financial_Task.recordType-meta.xml
<RecordType>
    <fullName>Financial_Task</fullName>
    <active>true</active>
    <label>Financial Task</label>
</RecordType>