force-app/main/default/objects/Task__c/recordTypes/Quantity_Task.recordType-meta.xml
<RecordType>
    <fullName>Quantity_Task</fullName>
    <active>true</active>
    <label>Quantity Task</label>
</RecordType>