force-app/main/default/objects/Task__c/recordTypes/Time_Task.recordType-meta.xml
<RecordType>
    <fullName>Time_Task</fullName>
    <active>true</active>
    <label>Time Task</label>
</RecordType>