force-app/main/default/objects/Task__c/validationRules/Results_are_too_high.validationRule-meta.xml
<ValidationRule>
    <fullName>Results_are_too_high</fullName>
    <active>true</active>
    <errorConditionFormula>Work_Results__c &gt;= 10</errorConditionFormula>
    <errorMessage>Work results should be less than 1000%</errorMessage>
</ValidationRule>