force-app/main/default/objects/Task__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Section_Path__c</columns>
    <columns>Status__c</columns>
    <columns>Work_Results__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>